# pkg/models/db/add_review.go
@@ -1,0 +1,9 @@
+package db_model
+
+type AddReview struct {
+	PK      string  `dynamodbav:"PK"`
+	SK      string  `dynamodbav:"SK"`
+	UserId  string  `dynamodbav:"UserId"`
+	Rating  float32 `dynamodbav:"Rating"`
+	Comment string  `dynamodbav:"Comment"`
+}
